packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__const_variable_declaration__const _x = 1const x  = ((_x)) < ((1 + 1)).snap
---
source: packages/llvm/src/tests/variable_declaration/const_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"_x|_|" = alloca double, align 8
  store double 1.000000e+00, double* %"_x|_|", align 8
  %"x|_|" = alloca i1, align 1
  %"2" = load double, double* %"_x|_|", align 8
  %"1" = fcmp olt double %"2", 2.000000e+00
  store i1 %"1", i1* %"x|_|", align 1
  ret void
}

